[gd_scene load_steps=3 format=3 uid="uid://bu4xvcsll0w5n"]

[ext_resource type="PackedScene" uid="uid://dv0gqt42k76sy" path="res://scenes/files/draggable_file.tscn" id="1_ajwo4"]
[ext_resource type="Script" path="res://scripts/files/error_exe_file.gd" id="2_42xpn"]

[node name="ErrorExeFile" instance=ExtResource("1_ajwo4")]
script = ExtResource("2_42xpn")

[node name="SpawnErrorTimer" type="Timer" parent="." index="5"]
one_shot = true

[connection signal="timeout" from="SpawnErrorTimer" to="." method="_on_spawn_error_timer_timeout"]
